Updating href on linearGradient and radialGradient doesn't update its rendering https://bugs.webkit.org/show_bug.cgi?id=191934

Patch by Said Abou-Hallawa <sabouhallawa@apple.com> on 2018-11-28
Reviewed by Ryosuke Niwa.

Source/WebCore:

Mark the gradient renderer for repaint when the value of the 'href'
attribute changes.

Tests: fast/shadow-dom/svg-linear-gradient-dynamic-update-href-in-shadow-tree.html
       fast/shadow-dom/svg-radial-gradient-dynamic-update-href-in-shadow-tree.html
       svg/dynamic-updates/SVGLinearGradientElement-svgdom-href-prop.html
       svg/dynamic-updates/SVGRadialGradientElement-svgdom-href-prop.html

* svg/SVGGradientElement.cpp:
(WebCore::SVGGradientElement::svgAttributeChanged):

LayoutTests:

* fast/shadow-dom/svg-linear-gradient-dynamic-update-href-in-shadow-tree-expected.html: Added.
* fast/shadow-dom/svg-linear-gradient-dynamic-update-href-in-shadow-tree.html: Added.
* fast/shadow-dom/svg-radial-gradient-dynamic-update-href-in-shadow-tree-expected.html: Added.
* fast/shadow-dom/svg-radial-gradient-dynamic-update-href-in-shadow-tree.html: Added.
* svg/dynamic-updates/SVGLinearGradientElement-svgdom-href-prop-expected.html: Added.
* svg/dynamic-updates/SVGLinearGradientElement-svgdom-href-prop.html: Added.
* svg/dynamic-updates/SVGRadialGradientElement-svgdom-href-prop-expected.html: Added.
* svg/dynamic-updates/SVGRadialGradientElement-svgdom-href-prop.html: Added.

Canonical link: https://commits.webkit.org/206801@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@238651 268f45cc-cd09-0410-ab3c-d52691b4dbfc